<resources>
    <string name="app_name">School Safety</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">عن الملتقي</string>
    <string name="menu_packages"> الحقيبة التدريبية</string>
    <string name="menu_students">تخضير الطلاب</string>
    <string name="menu_analysischart">تقارير واحصائيات</string>
    <string name="menu_contacts">تواصل معنا</string>
    <string name="menu_logout">تسجيل خروج</string>


</resources>
